# cashgb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  bus.cpp  bus.h  cart.cpp  cart.h  cashgb.cpp  cpu.cpp  cpu.h
examples/: ppu_direct_demo.rs  simple_terminal_demo.rs  terminal_display.rs  tetris_demo.rs
src/: cart.rs  cpu.rs  lib.rs  main.rs  register.rs
src/cpu/: execute.rs  instructions.rs  mod.rs  registers.rs  tests.rs
src/cpu/tests/: comprehensive_integration_tests.rs  integration_tests.rs
src/memory/: mbc.rs  mod.rs
src/memory/cart/: cart_header.rs  cart_types.rs  mod.rs
src/ppu/: background.rs  debug_sprite_test.rs  debug_test_expectations.rs  display.rs  mod.rs  registers.rs  sprite_rendering_tests.rs  sprites.rs  tests.rs  timing.rs
