[package]
name = "cash-gb"
authors = ["Cash <master_Cash@live.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.16.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
